@@ -1,5 +1,8 @@
 * marks an incompatible change
 
+  * [prover] support for mathematica
+  * [prover] support for MathSAT5
+
 version 0.80, Oct 31, 2012
 ==========================
   * [whyml] modified syntax for mlw programs; a summary of changes is
